# MyTinyTests

./: .gitignore  README.md  automatic_power_on_off.bat  backtrace.c  bit_fields.c  c_getchar_curses.c  c_getchar_sttyraw.c  c_multi_array.c  c_pointer_transfer.c  c_sizeof_operator.c  c_struct_Inheritance.c  c_toptest.c  capture_icmp.c  cc_polymorphism.cc  cdeclare.py  char_array_sizeof.c  class_test.py  cmd_args_test.py  compare_and_swap.c  copy_modules.py  divisions.py  endian_test.c  files_operation.py  find_symbol.sh  grep_find_cooperate.sh  inquery_my_public_ip.py  inquery_my_public_ip_py3.py  lambda_map_sample.py  matching_machine.c  minprintf.c  printf_x.c  publish.py  regex_search.py  replace_public_headers.py  rlnumd.c  serial_power_on_off.py  serial_power_on_off_py2.py  test0.py  vimrc  webspider_qiushibaike_duanzi.py
Algorithms_and_DataStructures/: README.md  divide_two_int_leecode.cc  dynamic_array_hankerrank.cc  myAtoi_leecode.cc  reversewords_leecode.cc  sparse_arrays_hankerrank.cc  tree_preorder_traversal_hankerrank.cc
CProgrammingLanguage/: simple_cat.c  va_param_in_macro.c
CheckGateway/: CheckGateway.sln
RESTClientSample/: RESTClientSample.sln
boost_test/: CMakeLists.txt  README.md  heaps_test.cc  heaps_test.h  main.cc
c_cc_misc/: README.md  backtrace.c  c_array_pointer.c  c_array_pointer_2.c  c_const.c  c_determin_sign.c  c_longjmp.c  c_segmentationfault.c  c_str_auto_connect.c  c_union.c  c_usual_arithmetic_conversion.c  capture_icmp.c  cc_const_reference_member.cc  cc_polymorphism.cc  determin_binary_32_64bit.c  minimum_int_test.c  rlimit_test.c  showip.c  strcasestr_null_input_test.c
c_interpositioning/: Readme.md  libhack.c  libprintf_hack.c  libstrcmp_hack.c  main1.c  main2.c  main3.c  main4.c  main5.c
cc11/: README.md  cc11_test.sln
char_system/: char_system.sln
cmake_test/: CMakeLists.txt  Makefile.am  README.md  autoclean.sh  autogen.sh  build.py  build.sh  clean.sh  cmake_config.h.in  configure.ac  main.cc
cmake_test/math_lib/: CMakeLists.txt  math_lib.cc
cmake_vs_gnu_build_system/: .gitignore  CMakeLists.txt  Makefile.am  README.md  build.py  configure.ac
cmake_vs_gnu_build_system/math_lib/: Makefile.am  math_lib.cc  math_lib.h
dcl/: dcl.sln
docker_test/: README.md
epoll_test/: README.md  epoll.sln
flatbuffers/: README.md
flatbuffers/monster/cpp/: .gitignore  CMakeLists.txt  build_monster.cpp  read_monster.cpp
get_info_from_maps/: README.md  amap_get_public_transportations.js  base_functions.js  busline_search_baidumap.js  generate_search_param_in.py  index_from_amap.html  line_search_amap.html  lines_search.html  lines_search_amap.html  lines_search_amap.js  lines_search_amap_service.py  local_nearby_search_baidumap.js  local_search_baidumap.js  my_base_tools.js  place_search_amap.js  place_search_googlemap.js  place_search_nearby_amap.js  search.html  search_config.js  search_global.js  search_param_in.js  tools_amap.js  tools_baidumap.js  tools_googlemap.js  webspider_wiki_citylines.py  write_to_file.js
gnu_build_system_test/: Makefile.am  Makefile.in  README.md  autogen.sh  clean.sh  configure.ac  hello.c
identical_template_symbols/: .gitignore  README.md  boo.cpp  boo.ii  boo.s  foo.cpp  foo.ii  foo.s  main.cpp  prog.map  thing.hpp
inquery_my_public_ip/: inquery_my_public_ip.py  refresh_newip_in_file.py
js_info_from_maps/: amap_get_public_transportations.js  index_from_amap.html
learn_intel_tbb/: .gitignore  CMakeLists.txt  README.md  main.cc  parallel_reduce_test.cc
learn_intel_tbb/modules/pstl2019_20181010oss/: CHANGES
learn_intel_tbb/modules/pstl2019_20181010oss/doc/: Release_Notes.txt
learn_intel_tbb/modules/pstl2019_20181010oss/include/pstl/internal/: bricks_impl.h
learn_intel_tbb/modules/tbb2019_20181010oss/: CHANGES  Doxyfile
learn_intel_tbb/modules/tbb2019_20181010oss/cmake/: TBBConfig.cmake
learn_intel_tbb/modules/tbb2019_20181010oss/doc/: Release_Notes.txt  copyright_brand_disclaimer_doxygen.txt
learn_intel_tbb/modules/tbb2019_20181010oss/include/tbb/: iterators.h
learn_intel_tbb/modules/tbb2019_20181010oss/lib/intel64/gcc4.1/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
learn_intel_tbb/modules/tbb2019_20181010oss/lib/intel64/gcc4.4/: libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
learn_intel_tbb/modules/tbb2019_20181010oss/lib/intel64/gcc4.7/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
learn_intel_tbb/src/: parallel_do_test.cc  parallel_reduce_test.cc
learn_lua/: .gitignore  README.md  c_module_test.lua  module1.lua  module1_test.lua
linux_c_simple_top/: README.md  simple_top.c
mars_test/: Readme.md
matplotlib_test/: my_sin_taylor.py
minimum_integter_test/: minimum_integter_test.sln
multicast/: multicast.sln
operator_overloading/: PrintString.h  README.md  ReadString.h  SalesData.cc  SalesData.h  StrVec.cc  StrVec.h  StrVec_session.vim  binary_calculator.cc  main.cc  mysession.vim
protobuf/: README.md
protobuf/proto2/: CMakeLists.txt  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  addressbook_pb2.py  read_main.cc  write_main.cc
rtmp_flv/: ClassDiagram.cd  FlvCommon.cc  FlvTag.cc  (+13 more)
shm_test/: .gitignore  CMakeLists.txt  README.md  boost_posix_shm_utils.cc  boost_posix_shm_utils.h  boost_shm.cc  boost_shm.h  boost_shm_utils.cc  boost_shm_utils.h  main.cc  posix_shm_utils.cc  posix_shm_utils.h  sample_structures.h  shm_utils_base.h  system_v_shm_utils.cc  system_v_shm_utils.h
test_shared_ptr/: .gitignore  CMakeLists.txt  README.md
test_shared_ptr/src/: loop_pass_pointers.hpp  main.cc  mock_classes.h  mock_classes.hpp  my_shared_ptr.hpp  sample_object.h
zlog_test/: CMakeLists.txt  README.md  dzlog_main.cc  main.cc  test_hello.conf
zlog_test/linux/: libzlog.so.1.1  zlog-chk-conf
(+248 files in other folders)
